
<resources>
    <string name="app_name">Foodike</string>
    <string name="onboardingHeading1">Choose your favourite food</string>
    <string name="onboardingHeading2">Vaccinated delivery partners</string>
    <string name="onboardingHeading3">Expect Delivery in 20 minutes</string>
    <string name="onboardingText1">Choose from a range of restaurants and hotels near you</string>
    <string name="onboardingText2">Vaccinated delivery partners ensure the health and security of the customer</string>
    <string name="onboardingText3">Fast and easy to track delivery to ease the experience of the customer</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_password">forgot password?</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="new_to_foodike">New to Foodike? Sign up</string>
    <string name="display_picture">Display picture</string>
    <string name="log_out">Log Out</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="add_edit_and_delete_saved_addresses">Add, edit and delete saved addresses</string>
    <string name="payments_and_refunds">
<![CDATA[ Payments & Refunds ]]>
</string>
    <string name="information_about_refunds_and_payments">Information about refunds and payments</string>
    <string name="online_ordering_help">Online Ordering Help</string>
    <string name="information_about_ordering_food">Information about ordering food</string>
    <string name="about">About</string>
    <string name="about_the_app">About the app</string>
    <string name="with">\With \</string>
    <string name="love">Love</string>
    <string name="from_creator">\ from Gautam Hazarika\</string>
    <string name="location">Location</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="empty">Empty</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="drop_down_arrow">Drop-Down Arrow</string>
    <string name="rating">Rating</string>
    <string name="outlet">Outlet</string>
    <string name="outlet_2">Outlet:</string>
    <string name="your_location">Your Location</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="non_vegetarian">Non-Vegetarian</string>
    <string name="cart">Cart</string>
    <string name="recommended">Recommended</string>
    <string name="all_around_you">All around you..</string>
    <string name="order_from_favourites">Order from favourites..</string>
    <string name="restaurant">Restaurant</string>
    <string name="recommended_for_you">Recommended for you...</string>
    <string name="ad">Ad</string>
    <string name="food_item_label_best_seller">Best Seller</string>

    <string name="food_for_everyone">Food for\nEveryone</string>
    <string name="get_started">Get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon.....</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign-Up</string>
    <string name="loginin">Login</string>
    <string name="sign_up">Signup</string>
    <string name="forgot_passcode">Forgot passcode?</string>
    <string name="password_signup">Password</string>
    <string name="email_signup">Email</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_">Password</string>
    <string name="sign">SignUp</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="fav">Fav</string>
    <string name="delicious_food_nfor_you">Delicious food\nfor you</string>
    <string name="veggie_tomato_mix">Veggie tomato mix</string>
    <string name="delivered_between_monday_aug_and_thursday_20_from_8pm_to_91_32_pm">Delivered between monday aug and thursday 20 from 8pm to 91:32 pm</string>
    <string name="all_our_foods_are_double_checked_before_leaving_our_stores_so_by_any_case_you_found_a_broken_food_please_contact_our_hotline_immediately">All our foods are double checked before leaving our stores so by any case you found a broken food please contact our hotline immediately.</string>
    <string name="addToCart">Add To Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="souce">Souce</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="complete_order">Complete order</string>
    <string name="favourite_">Favourite</string>
</resources>