<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/design_space_50dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <ImageView
                android:id="@+id/favouriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black">

            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/introViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarContainer" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/into_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introViewPager"
            app:tabBackground="@drawable/tab_pager_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabPaddingEnd="10dp"
            app:tabPaddingStart="10dp" />

        <LinearLayout
            android:id="@+id/foodNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/into_tab_layout">

            <TextView
                android:id="@+id/foodItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee_talic"
                android:text="@string/veggie_tomato_mix"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/foodItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="N1,900"
                android:textColor="@color/orange"
                android:textSize="22sp" />

        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/foodDeliverInfoContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/design_space_50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="@dimen/design_space_50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abeezee_talic"
                        android:text="@string/veggie_tomato_mix"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/deliveryInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/abel_regular"
                        android:text="@string/delivered_between_monday_aug_and_thursday_20_from_8pm_to_91_32_pm"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/foodReturnContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/design_space_50dp"
                    android:layout_marginTop="@dimen/design_space_32dp"
                    android:layout_marginEnd="@dimen/design_space_50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abeezee_talic"
                        android:text="@string/veggie_tomato_mix"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/returnPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/abel_regular"
                        android:text="@string/all_our_foods_are_double_checked_before_leaving_our_stores_so_by_any_case_you_found_a_broken_food_please_contact_our_hotline_immediately"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddToCart"
        style="@style/RoundButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/design_space_50dp"
        android:layout_marginStart="@dimen/design_space_50dp"
        android:layout_marginEnd="@dimen/design_space_50dp"
        android:text="@string/addToCart"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</FrameLayout>
